Add product Link in search page

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Boardousell, buy boardgame or sell second-hand boardgame platform"
+      content="Boardousell! We provide a wide range of board games for all ages and interests, making it easy for you to find and purchase your favorite games in a user-friendly and enjoyable shopping environment."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/boardousell-logo.png" />
     <!--
